# RouteIQ

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .rr.yaml  .yamllint.yaml  AGENTS.md  BEADS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_ARCHITECTURE_ASSESSMENT.md  E2E_API_VALIDATION_REPORT.json  GATE10_DOCKER_E2E_GAPS_CLOSURE_REPORT.md  GATE11_DOCKER_E2E_FINAL_REPORT.md  GATE6_MCP_VALIDATION_REPORT.md  GATE7_SECURITY_VALIDATION_REPORT.md  GATE8_OBSERVABILITY_VALIDATION_REPORT.md  GATE9_DOCKER_E2E_VALIDATION_REPORT.md  Makefile  README.md  TG10_0_Codepath_Mapping.md  docker-compose.ha-otel.yml  docker-compose.ha-test.yml  docker-compose.ha.yml  docker-compose.local-test.yml  docker-compose.otel.yml  docker-compose.streaming-perf.yml  docker-compose.yml  lefthook.yml  mkdocs.yml  pyproject.toml  requirements.txt
.beads/: metadata.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  ha-gate.yml  load-gate.yml  release.yml
.kiro/steering/: testing-guidelines.md
.mulch/: mulch.config.yaml
.overstory/: config.yaml  groups.json  hooks.json
.seeds/: config.yaml  issues.jsonl
config/: cloudwatch-dashboard.json  config.bedrock-fallbacks.yaml  config.bedrock.yaml  config.claude-code-full-coverage.yaml  config.claude-code.yaml  config.local-test.yaml  config.mock-tiers.yaml  config.openrouter.yaml  config.otel-test.yaml  config.self-hosted-engine.yaml  config.streaming-perf.yaml  config.yaml  llm_candidates.json  nginx.conf  otel-collector-config.yaml
config/golden_eval/: routing_golden_v1.json
custom_routers/: .gitkeep
deploy/cdk/: README.md  app.py  cdk.json  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.local  Dockerfile.slim  entrypoint.local.sh  entrypoint.sh
docs/: TECHNICAL_ROADMAP.md  VALIDATION_PLAN.md  a2a-gateway.md  api-reference.md  aws-production-guide.md  configuration.md  contributing.md  deployment.md  high-availability.md  hot-reloading.md  implementation-backlog.md  index.md  litellm-cloud-native-enhancements.md  load-soak-gates.md  mcp-gateway.md  mlops-training.md  moat-mode.md  observability.md  plugin-development-guide.md  plugins.md  product-vision.md  project-state.md  quickstart-docker-compose.md  quickstart-ha-compose.md  quickstart-otel-compose.md  routing-strategies.md  security.md  skills-gateway.md  vector-stores.md
docs/adr/: 0001-three-layer-architecture.md  0002-plugin-routing-strategy.md  0003-delete-redundant-mcp.md  0004-asyncpg-connection-pooling.md  0005-redis-singleton.md  0006-security-hardening-defaults.md  0007-dependency-tiering.md  0008-oidc-identity-integration.md  0009-multi-tier-docker-images.md  0010-centroid-zero-config-routing.md  0011-pluggable-external-services.md  0012-own-fastapi-app.md  0013-pydantic-settings.md  0014-plugin-extraction.md  0015-k8s-native-leader-election.md  0016-developer-experience-features.md  0017-leverage-litellm-upstream.md  0018-disaggregated-ui.md  0019-otel-genai-conventions.md  0020-governance-layer.md  0021-externalized-state.md  0022-governance-middleware-integration.md  0023-guardrail-policy-pipeline.md  0024-context-optimizer.md  0025-personalized-routing.md  0026-appconfig-gitops-config-delivery.md  0027-otel-amp-amg-observability-on-aws.md  0028-aurora-postgres-serverless-v2-state.md  0029-elasticache-serverless-valkey-cache.md  0030-eks-auto-mode-irsa-substrate.md  README.md
docs/api/: gateway.md  governance.md  routing.md
docs/architecture/: ARCHITECTURE.md  ROUTEIQ-ARCHITECTURE-REVIEW-2026-02.md  adrs.md  agentcore-integration-and-arch-2026-06-15.md  agentcore-registry-integration-2026-06-15.md  aws-deployment.md  bedrock-discovery.md  deep-review-v0.2.0.md  evidence-console-design.md  four-way-comparison.md  litellm-version-and-container-2026-06-15.md  ml-routing-cloud-native.md  overview.md  tg3-admin-ui-design.md  tg3-alternative-patterns.md  tg3-nadirclaw-integration.md  vsr-vs-routeiq-decision-v2.md  vsr-vs-routeiq-decision-v3.md  vsr-vs-routeiq-decision.md
docs/archive/: streaming-verification.md
docs/deployment/: aws.md  cloudfront-alb.md  multi-account-multi-region.md
docs/features/: a2a-gateway.md  context-optimizer.md  mcp-gateway.md  prompt-management.md  routing.md  skills-gateway.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/governance/: guardrails.md  identity.md  overview.md  usage-policies.md  workspaces.md
docs/handoffs/: 2026-06-14-1211-pivot-to-routeiq-on-aws.md
docs/operations/: bedrock-fallbacks.md  claude-code-routing.md  dashboard-embedding.md  deployment.md  docker.md  eks-auto-mode-ingress.md  helm.md  observability.md  security.md  universal-surface-and-deferred-runbook.md
docs/plans/: 2026-02-13-routeiq-v0.1.0-design.md  2026-02-13-routeiq-v0.1.0-implementation.md
docs/research/: portkey-governance-analysis.md
examples/: README.md
examples/mlops/: Dockerfile.deployer  Dockerfile.trainer  README.md  docker-compose.mlops.yml
models/: .gitkeep
plans/: backlog.md  cloud-native-architectural-roadmap.md  implementation-decomposition.md  parity-roadmap.md  resume-checkpoint.md  technical-roadmap.md  v1.0-rearchitecture-plan.md
scripts/: a2a_stub_agent.py  comprehensive_test.py  copy_centroids.py  detect_secrets.py  e2e_api_validation.py  e2e_test.py  generate_centroids.py  install_lefthook.sh  lint.sh  mcp_stub_server.py  run_ha_gate.py  run_load_gate.py  streaming_stub_server.py  test_gateway.py  test_security_multi_tenancy.py  train_from_traces.py  validate_mcp_gateway.py  validate_mcp_gateway_curl.sh  validate_mcp_jsonrpc.py  validate_mcp_sse.py  validate_parity.py
tests/: __init__.py  conftest.py  test_http_routes.py  test_mcp_parity.py  test_mcp_tool_invocation.py  test_security_abuse.py  test_ssrf_hardening.py  test_strategies.py
tests/perf/: __init__.py  (+1 more)
tools/: centroid_calibration.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+491 files in other folders)
