[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routeiq"
version = "1.0.0rc1"
description = "RouteIQ Gateway - Production AI Gateway with ML-based routing (built on LiteLLM + LLMRouter)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Core application framework
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.26.0",
    # LiteLLM core (provides Router, logging, etc.)
    # Note: Using litellm without the [proxy] extra. The modern [proxy] extra uses `>=` version
    # RANGES (not the `==` pins the historical conflict-avoidance rationale assumed), so that
    # premise is stale. RouteIQ still avoids [proxy] because it runs the proxy IN-PROCESS under
    # its own FastAPI app (ADR-0012) and needs none of [proxy]'s server runners
    # (gunicorn/granian/uvicorn/rq/polars/soundfile/litellm-enterprise/litellm-proxy-extras).
    # We hand-vendor only the proxy transitive deps actually imported at initialize() below.
    "litellm==1.89.0",
    # APScheduler - required by litellm proxy for background scheduling
    "apscheduler>=3.10.0",
    # email-validator - required by pydantic.EmailStr (used by LiteLLM proxy SCIM)
    "email-validator>=2.0.0",
    # fastapi-sso - required by LiteLLM proxy SSO endpoints
    "fastapi-sso>=0.16.0",
    # websockets - required by LiteLLM proxy guardrails
    "websockets>=15.0.0",
    # backoff - required by LiteLLM proxy utils for retry logic
    "backoff>=2.0.0",
    # redis - required by LiteLLM for Redis caching
    "redis>=5.0.0",
    # orjson - eager top-level import in litellm.proxy.proxy_server; ABSENT from the prod
    #          closure (masked in dev by mypy[faster-cache]) — closes that latent gap
    "orjson>=3.11.6",
    # mcp - conditional litellm.proxy import; required if any config declares MCP servers/tools
    "mcp>=1.26.0",
    # Configuration and utilities
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    # Observability: OpenTelemetry core
    "prometheus-client>=0.24.1",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    # OTEL instrumentation (required for observability module imports)
    "opentelemetry-instrumentation>=0.43b0",
    "opentelemetry-instrumentation-logging>=0.43b0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "ruff>=0.14.13",
    "mypy>=1.8.0",
    # authlib: required so the OIDC unit tests (tests/unit/test_oidc.py) can
    # exercise the real token-validation code paths. The `authlib_available`
    # guard in src/litellm_llmrouter/oidc.py short-circuits validate_token()
    # before mock patches run when authlib is absent. authlib stays an OPTIONAL
    # runtime dependency (see the `oidc`/`prod`/`all` extras below).
    "authlib>=1.5.0",
    # boto3: litellm 1.89.0 added an eager module-level boto3 import reachable
    # from litellm.proxy.proxy_server, so importing it under a bare
    # `uv sync --extra dev` (no `cloud`) raises ModuleNotFoundError: boto3.
    # PROD/Docker are unaffected (the `prod` extra pulls `cloud`, which carries
    # boto3). Lower bound matches the `cloud` extra (RouteIQ-fbda).
    "boto3>=1.42.32",
]
# Database support (PostgreSQL with asyncpg and Prisma client for LiteLLM)
db = ["asyncpg>=0.29.0", "prisma>=0.13.0"]
# Full observability with all OTEL instrumentation
otel = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-requests>=0.43b0",
    # OTel->Prometheus pull bridge (RouteIQ-bd7d / RouteIQ-f60a): supplies the
    # PrometheusMetricReader that observability.py wires into the MeterProvider
    # at construction so the RouteIQ OTel instruments surface on GET /metrics.
    # Rolled up into `prod` via this `otel` extra. Versioned as the 0.x beta
    # line that tracks the opentelemetry-sdk 1.x pin (same scheme as the
    # instrumentation packages above).
    "opentelemetry-exporter-prometheus>=0.43b0",
    # AWS X-Ray app-side wiring (RouteIQ-3c0a): the X-Ray-format trace-ID
    # generator + the X-Amzn-Trace-Id propagator that observability.py installs
    # when ROUTEIQ_OTEL__XRAY_ENABLED is set, so CloudWatch Transaction Search /
    # X-Ray show a single edge-to-Bedrock trace. Both are OPTIONAL — their
    # absence degrades to W3C with a warning (never breaks boot). 0.x beta line
    # tracking the opentelemetry-sdk 1.x pin (same scheme as the packages above).
    "opentelemetry-sdk-extension-aws>=2.0.0",
    "opentelemetry-propagator-aws-xray>=1.0.0",
]
# Cloud provider SDKs (optional, includes boto3 for AWS S3 config sync)
# kubernetes: required for K8s Lease API leader election (ADR-0015)
cloud = ["boto3>=1.42.32", "google-cloud-aiplatform>=1.134.0", "azure-identity>=1.15.0", "kubernetes>=31.0.0"]
# A2A Protocol SDK (Agent-to-Agent communication)
a2a = ["a2a-sdk>=0.2.0"]
# Hot reload with filesystem watching
hotreload = ["watchdog>=3.0.0"]
# OIDC authentication support
oidc = ["authlib>=1.5.0"]
# Callback integrations (langfuse, etc.)
callbacks = ["langfuse>=3.0.0"]
# KNN/ML routing inference dependencies (torch + embeddings + sklearn).
# torch is a DIRECT dep here so the pytorch-cpu source ([tool.uv.sources],
# RouteIQ-07ef) actually binds — [tool.uv.sources] only applies to direct
# deps. This is the only place torch enters the resolution; pulling it into
# `knn` keeps the base/prod closure torch-free (RouteIQ-ba11).
knn = ["torch", "sentence-transformers>=5.2.0", "scikit-learn>=1.3.0"]
# Production extras (for Docker builds) — TORCH-FREE. Centroid routing
# (ADR-0010, the default routing path) needs no torch, so the default prod
# image carries no torch/sentence-transformers/CUDA stack (RouteIQ-ba11).
prod = ["routeiq[db,otel,cloud,callbacks,a2a,hotreload,oidc]"]
# Production + ML tier — adds the KNN/ML routing strategies (pulls torch-cpu +
# sentence-transformers + sklearn via the `knn` extra). Use for deployments
# that need the KNN/ML strategy family on top of the torch-free prod base.
prod-ml = ["routeiq[prod,knn]"]
# All optional dependencies (including dev tools) — dev superset, keeps knn.
all = ["routeiq[dev,db,otel,cloud,knn,a2a,hotreload,oidc]"]
# Documentation site
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5",
    "mkdocs-autorefs>=0.5",
    "pymdown-extensions>=10.0",
]
# AWS CDK foundation (deploy/cdk/) — the cred-free `uv run pytest deploy/cdk/tests/`
# synth + cdk-nag gate. Mirrors deploy/cdk/requirements.txt (proposal §5.1).
cdk = [
    "aws-cdk-lib>=2.150.0,<3.0.0",
    "cdk-nag>=2.27.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
    "pytest>=7.4.0,<9.0.0",
]

[project.scripts]
routeiq = "litellm_llmrouter.cli:main"

# =============================================================================
# uv torch-CPU index pin (RouteIQ-07ef)
# =============================================================================
# torch ships ~900MB of CUDA wheels (15 nvidia-*-cu12 + triton) on amd64 by
# default. RouteIQ's default routing path (ADR-0010 centroid) is torch-FREE;
# only the KNN/ML strategy tier needs torch, and it runs fine on CPU.
#
# `UV_EXTRA_INDEX_URL` (set in the Dockerfile) only *adds* an index — PyPI still
# satisfies the pin, so the CUDA stack is pulled regardless. The deterministic
# fix is an explicit pytorch-cpu index + a [tool.uv.sources] binding.
#
# LOAD-BEARING: [tool.uv.sources] binds a package ONLY when it is a DIRECT
# project/extra dependency. torch is transitive-only today (via
# sentence-transformers), so this pin would silently no-op. The fix therefore
# ALSO declares `torch` as a direct dependency inside the `knn` extra (below),
# which is the only place torch enters the resolution.
#   explicit=true keeps the cpu index from being consulted for non-torch pkgs.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v"

[tool.hypothesis]
max_examples = 100

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["reference/"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "backoff>=2.0.0",
    "cryptography>=42.0.0",
    "orjson>=3.10.0",
    "ruff>=0.14.13",
]
